--- a/manifest.json
+++ b/manifest.json
@@ -1,34 +1,38 @@
 {
-   "background": {
-      "scripts": [ "js/lib/jquery-1.7.2.min.js", "js/background.js" ]
-   },
-   "browser_action": {
-      "default_icon": "images/icons/19x19.png",
-      "default_title": "__MSG_BrowserActionTitle__"
-   },
+    "background": {
+        "scripts": [ "js/lib/jquery-1.7.2.min.js", "js/background.js" ]
+    },
+    "browser_action": {
+        "default_icon": "images/icons/19x19.png",
+        "default_title": "__MSG_BrowserActionTitle__"
+    },
    "content_scripts": [
-      {
-         "js": [ "js/lib/jquery-1.7.2.min.js", "js/lib/extract-content.js", "js/web.page.js" ],
-         "css": [ "css/web.page.css" ],
-         "matches": [ "http://*/*", "https://*/*" ]
-      },
-      {
-         "js": [ "js/sites/weibo.com.js" ],
-         "matches": [ "http://weibo.com/*", "http://*.weibo.com/*" ]
-      }
-   ],
-   "default_locale": "zh_CN",
-   "description": "__MSG_ExtensionDescription__",
-   "icons": {
-      "128": "images/icons/128x128.png",
-      "16": "images/icons/16x16.png",
-      "19": "images/icons/19x19.png",
-      "32": "images/icons/32x32.png",
-      "48": "images/icons/48x48.png"
-   },
-   "manifest_version": 2,
-   "name": "__MSG_ExtensionName__",
-   "permissions": [ "tabs", "contextMenus", "cookies", "management", "pageCapture", "notifications", "http://*/*", "https://*/*" ],
-   "version": "1.0.0",
-   "web_accessible_resources": [ "reader.html" ]
+        {
+            "js": [ "js/lib/jquery-1.7.2.min.js", "js/lib/extract-content.js", "js/web.page.js" ],
+            "css": [ "css/web.page.css" ],
+            "matches": [ "http://*/*", "https://*/*" ]
+        },
+        {
+            "js": [ "js/sites/weibo.com.js" ],
+            "matches": [ "http://weibo.com/*", "http://*.weibo.com/*" ]
+        },
+        {
+            "js": [ "js/sites/douban.com.js" ],
+            "matches": [ "http://movie.douban.com/review/*", "http://book.douban.com/review/*", "http://music.douban.com/review/*" ]
+        }
+    ],
+    "default_locale": "zh_CN",
+    "description": "__MSG_ExtensionDescription__",
+    "icons": {
+        "128": "images/icons/128x128.png",
+        "16": "images/icons/16x16.png",
+        "19": "images/icons/19x19.png",
+        "32": "images/icons/32x32.png",
+        "48": "images/icons/48x48.png"
+    },
+    "manifest_version": 2,
+    "name": "__MSG_ExtensionName__",
+    "permissions": [ "tabs", "contextMenus", "cookies", "management", "pageCapture", "notifications", "http://*/*", "https://*/*" ],
+    "version": "1.0.0",
+    "web_accessible_resources": [ "reader.html" ]
 }
