--- a/manifest.json
+++ b/manifest.json
@@ -1,32 +1,32 @@
 {
     "background": {
-        "scripts": [ "js/lib/jquery-1.7.2.min.js", "js/background.js" ]
+        "scripts": [ "js/lib/jquery-1.10.1.min.js", "js/lib/extract-content.js", "js/settings.js", "js/background.js" ]
     },
     "browser_action": {
         "default_icon": "images/icons/19x19.png",
         "default_title": "__MSG_BrowserActionTitle__"
     },
-   "content_scripts": [
+    "content_scripts": [
         {
-            "js": [ "js/lib/jquery-1.7.2.min.js", "js/lib/extract-content.js", "js/all.pages.js" ],
+            "js": [ "js/lib/jquery-1.10.1.min.js", "js/lib/string.levenshtein.js", "js/lib/extract-content.js", "js/getpagecontent.js", "js/all.pages.js" ],
             "css": [ "css/all.pages.css" ],
             "matches": [ "http://*/*", "https://*/*" ]
-        },
-        {
-            "js": [ "js/sites/weibo.com.js" ],
-            "matches": [ "http://weibo.com/*", "http://*.weibo.com/*" ]
         },
         {
             "js": [ "js/sites/douban.com.js" ],
             "matches": [ "http://movie.douban.com/review/*", "http://book.douban.com/review/*", "http://music.douban.com/review/*" ]
         },
         {
-            "js": [ "js/sites/www.tianya.cn.js" ],
-            "matches": [ "http://www.tianya.cn/publicforum/*" ]
+            "js": [ "js/sites/zhihu.com.js" ],
+            "matches": [ "http://www.zhihu.com/question/*" ]
         },
         {
             "js": [ "js/sites/bbs.tianya.cn.js" ],
             "matches": [ "http://bbs.tianya.cn/*" ]
+        },
+        {
+            "js": [ "js/sites/wenku.baidu.com.js" ],
+            "matches": [ "http://wenku.baidu.com/view/*" ]
         }
     ],
     "default_locale": "zh_CN",
@@ -39,8 +39,9 @@
         "48": "images/icons/48x48.png"
     },
     "manifest_version": 2,
+    "options_page": "options.html",
     "name": "__MSG_ExtensionName__",
-    "permissions": [ "tabs", "contextMenus", "cookies", "management", "pageCapture", "notifications", "http://*/*", "https://*/*" ],
-    "version": "1.0.0",
+    "permissions": [ "tabs", "contextMenus", "http://*/*", "https://*/*" ],
+    "version": "1.0",
     "web_accessible_resources": [ "reader.html" ]
 }
