--- a/manifest.json
+++ b/manifest.json
@@ -42,6 +42,6 @@
     "options_page": "options.html",
     "name": "__MSG_ExtensionName__",
     "permissions": [ "tabs", "contextMenus", "http://*/*", "https://*/*" ],
-    "version": "1.0",
-    "web_accessible_resources": [ "reader.html" ]
+    "version": "1.2.4",
+    "web_accessible_resources": [ "reader.html", "js/lib/jquery-1.10.2.min.map" ]
 }
