--- a/manifest.json
+++ b/manifest.json
@@ -3,10 +3,15 @@
         "scripts": [
             "js/lib/jquery-1.10.2.min.js",
             "js/lib/extract-content.js",
+            "js/lib/jps.js",
             "js/lib/evernote-sdk-minified.js",
             "js/lib/jsOAuth-1.3.7.min.js",
             "js/module.settings.js",
-            "js/module.background.js" ]
+            "js/module.background.shell.js",
+            "js/module.util.js",
+            "js/module.background.js",
+            "js/module.evernote.js"
+        ]
     },
     "browser_action": {
         "default_icon": "images/icons/19x19.png",
