--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,7 @@
             "js/lib/jps.js",
             "js/lib/evernote-sdk-minified.js",
             "js/lib/jsOAuth-1.3.7.min.js",
+            "js/lib/htmlparser.js",
             "js/module.settings.js",
             "js/module.background.shell.js",
             "js/module.util.js",
@@ -65,6 +66,6 @@
     "options_page": "options.html",
     "name": "__MSG_ExtensionName__",
     "permissions": [ "tabs", "contextMenus", "http://*/*", "https://*/*" ],
-    "version": "1.3.1",
+    "version": "1.4.0",
     "web_accessible_resources": [ "reader.html", "js/lib/jquery-1.10.2.min.map" ]
 }
