--- a/manifest.json
+++ b/manifest.json
@@ -53,7 +53,8 @@
     "manifest_version": 2,
     "options_page": "options.html",
     "name": "__MSG_ExtensionName__",
+    "short_name": "__MSG_ExtensionShortName__",
     "permissions": [ "tabs", "contextMenus", "http://*/*", "https://*/*" ],
-    "version": "1.3.3",
+    "version": "1.3.4",
     "web_accessible_resources": [ "reader.html", "js/lib/jquery-1.10.2.min.map" ]
 }
