--- a/manifest.json
+++ b/manifest.json
@@ -19,9 +19,10 @@
                 "js/module.getpagecontent.js",
                 "js/module.page.js",
                 "js/module.selectionphrase.js",
-                "js/module.page.shell.js"
+                "js/module.page.shell.js",
+                "js/sites/google.com.js"
             ],
-                "css": [ "css/all.pages.css", "css/module.dictlayer.css" ],
+            "css": [ "css/all.pages.css", "css/module.dictlayer.css" ],
             "matches": [ "http://*/*", "https://*/*" ]
         },
         {
@@ -55,6 +56,6 @@
     "name": "__MSG_ExtensionName__",
     "short_name": "__MSG_ExtensionShortName__",
     "permissions": [ "tabs", "contextMenus", "http://*/*", "https://*/*" ],
-    "version": "1.3.8",
+    "version": "1.3.9",
     "web_accessible_resources": [ "reader.html", "js/lib/jquery-1.10.2.min.map" ]
 }
