--- a/manifest.json
+++ b/manifest.json
@@ -19,6 +19,7 @@
                 "js/module.getpagecontent.js",
                 "js/module.page.js",
                 "js/module.selectionphrase.js",
+                "js/module.chrome.newtab.js",
                 "js/module.page.shell.js",
                 "js/sites/google.com.js"
             ],
@@ -56,6 +57,6 @@
     "name": "__MSG_ExtensionName__",
     "short_name": "__MSG_ExtensionShortName__",
     "permissions": [ "tabs", "contextMenus", "http://*/*", "https://*/*" ],
-    "version": "1.3.9",
+    "version": "1.4.0",
     "web_accessible_resources": [ "reader.html", "js/lib/jquery-1.10.2.min.map" ]
 }
