--- a/manifest.json
+++ b/manifest.json
@@ -20,10 +20,11 @@
                 "js/module.page.js",
                 "js/module.selectionphrase.js",
                 "js/module.chrome.newtab.js",
+                "js/module.search.js",
                 "js/module.page.shell.js",
                 "js/sites/google.com.js"
             ],
-            "css": [ "css/all.pages.css", "css/module.dictlayer.css" ],
+            "css": [ "css/all.pages.css", "css/module.dictlayer.css", "css/module.search.css" ],
             "matches": [ "http://*/*", "https://*/*" ]
         },
         {
@@ -58,5 +59,5 @@
     "short_name": "__MSG_ExtensionShortName__",
     "permissions": [ "tabs", "contextMenus", "http://*/*", "https://*/*" ],
     "version": "1.4.0",
-    "web_accessible_resources": [ "reader.html", "js/lib/jquery-1.10.2.min.map" ]
+    "web_accessible_resources": [ "reader.html", "js/lib/jquery-1.10.2.min.map", "css/images/logo.png" ]
 }
