--- a/manifest.json
+++ b/manifest.json
@@ -25,23 +25,28 @@
                 "js/sites/google.com.js"
             ],
             "css": [ "css/all.pages.css", "css/module.dictlayer.css", "css/module.search.css" ],
-            "matches": [ "http://*/*", "https://*/*" ]
+            "matches": [ "http://*/*", "https://*/*" ],
+            "run_at": "document_start"
         },
         {
             "js": [ "js/sites/douban.com.js" ],
-            "matches": [ "http://movie.douban.com/review/*", "http://book.douban.com/review/*", "http://music.douban.com/review/*" ]
+            "matches": [ "http://movie.douban.com/review/*", "http://book.douban.com/review/*", "http://music.douban.com/review/*" ],
+            "run_at": "document_start"
         },
         {
             "js": [ "js/sites/zhihu.com.js" ],
-            "matches": [ "http://www.zhihu.com/question/*" ]
+            "matches": [ "http://www.zhihu.com/question/*" ],
+            "run_at": "document_start"
         },
         {
             "js": [ "js/sites/bbs.tianya.cn.js" ],
-            "matches": [ "http://bbs.tianya.cn/*" ]
+            "matches": [ "http://bbs.tianya.cn/*" ],
+            "run_at": "document_start"
         },
         {
             "js": [ "js/sites/wenku.baidu.com.js" ],
-            "matches": [ "http://wenku.baidu.com/view/*", "http://wapwenku.baidu.com/view/*" ]
+            "matches": [ "http://wenku.baidu.com/view/*", "http://wapwenku.baidu.com/view/*" ],
+            "run_at": "document_start"
         }
     ],
     "default_locale": "zh_CN",
