--- a/manifest.json
+++ b/manifest.json
@@ -1,73 +1,107 @@
 {
-    "background": {
-        "scripts": [ "js/lib/jquery-1.10.2.min.js", "js/lib/extract-content.js", "js/module.settings.js", "js/background.js" ]
+  "background": {
+    "scripts": [
+      "js/lib/jquery-1.10.2.min.js",
+      "js/lib/extract-content.js",
+      "js/module.settings.js",
+      "js/background.js"
+    ]
+  },
+  "browser_action": {
+    "default_icon": "images/icons/19x19.png",
+    "default_title": "__MSG_BrowserActionTitle__"
+  },
+  "content_scripts": [
+    {
+      "js": [
+        "js/lib/jquery-1.10.2.min.js",
+        "js/lib/string.levenshtein.js",
+        "js/lib/extract-content.js",
+        "js/lib/jps.js",
+        "js/lib/mustache.js",
+        "js/lib/jquery.autocomplete.min.js",
+        "js/module.common.shell.js",
+        "js/module.dictlayer.js",
+        "js/module.getpagecontent.js",
+        "js/module.page.js",
+        "js/module.selectionphrase.js",
+        "js/module.search.js",
+        "js/module.page.shell.js",
+        "js/sites/google.com.js"
+      ],
+      "css": [
+        "css/all.pages.css",
+        "css/module.dictlayer.css",
+        "css/module.search.css"
+      ],
+      "matches": [
+        "http://*/*",
+        "https://*/*"
+      ],
+      "all_frames": true,
+      "run_at": "document_start"
     },
-    "browser_action": {
-        "default_icon": "images/icons/19x19.png",
-        "default_title": "__MSG_BrowserActionTitle__"
+    {
+      "js": ["js/sites/douban.com.js"],
+      "matches": [
+        "http://movie.douban.com/review/*",
+        "http://book.douban.com/review/*",
+        "http://music.douban.com/review/*"
+      ],
+      "all_frames": true,
+      "run_at": "document_start"
     },
-    "content_scripts": [
-        {
-            "js": [
-                "js/lib/jquery-1.10.2.min.js",
-                "js/lib/string.levenshtein.js",
-                "js/lib/extract-content.js",
-                "js/lib/jps.js",
-                "js/lib/mustache.js",
-                "js/lib/jquery.autocomplete.min.js",
-                "js/module.common.shell.js",
-                "js/module.dictlayer.js",
-                "js/module.getpagecontent.js",
-                "js/module.page.js",
-                "js/module.selectionphrase.js",
-                "js/module.search.js",
-                "js/module.page.shell.js",
-                "js/sites/google.com.js"
-            ],
-            "css": [ "css/all.pages.css", "css/module.dictlayer.css", "css/module.search.css" ],
-            "matches": [ "http://*/*", "https://*/*" ],
-            "run_at": "document_start"
-        },
-        {
-            "js": [ "js/sites/douban.com.js" ],
-            "matches": [ "http://movie.douban.com/review/*", "http://book.douban.com/review/*", "http://music.douban.com/review/*" ],
-            "run_at": "document_start"
-        },
-        {
-            "js": [ "js/sites/zhihu.com.js" ],
-            "matches": [ "http://www.zhihu.com/question/*" ],
-            "run_at": "document_start"
-        },
-        {
-            "js": [ "js/sites/quora.com.js" ],
-            "matches": [ "http://www.quora.com/*" ],
-            "run_at": "document_start"
-        },
-        {
-            "js": [ "js/sites/bbs.tianya.cn.js" ],
-            "matches": [ "http://bbs.tianya.cn/*" ],
-            "run_at": "document_start"
-        },
-        {
-            "js": [ "js/sites/wenku.baidu.com.js" ],
-            "matches": [ "http://wenku.baidu.com/view/*", "http://wapwenku.baidu.com/view/*" ],
-            "run_at": "document_start"
-        }
-    ],
-    "default_locale": "zh_CN",
-    "description": "__MSG_ExtensionDescription__",
-    "icons": {
-        "128": "images/icons/128x128.png",
-        "16": "images/icons/16x16.png",
-        "19": "images/icons/19x19.png",
-        "32": "images/icons/32x32.png",
-        "48": "images/icons/48x48.png"
+    {
+      "js": ["js/sites/zhihu.com.js"],
+      "matches": ["http://www.zhihu.com/question/*"],
+      "all_frames": true,
+      "run_at": "document_start"
     },
-    "manifest_version": 2,
-    "options_page": "options.html",
-    "name": "__MSG_ExtensionName__",
-    "short_name": "__MSG_ExtensionShortName__",
-    "permissions": [ "tabs", "contextMenus", "http://*/*", "https://*/*" ],
-    "version": "1.4.6",
-    "web_accessible_resources": [ "reader.html", "js/lib/jquery-1.10.2.min.map", "css/images/logo.png" ]
+    {
+      "js": ["js/sites/quora.com.js"],
+      "matches": ["http://www.quora.com/*"],
+      "all_frames": true,
+      "run_at": "document_start"
+    },
+    {
+      "js": ["js/sites/bbs.tianya.cn.js"],
+      "matches": ["http://bbs.tianya.cn/*"],
+      "all_frames": true,
+      "run_at": "document_start"
+    },
+    {
+      "js": ["js/sites/wenku.baidu.com.js"],
+      "matches": [
+        "http://wenku.baidu.com/view/*",
+        "http://wapwenku.baidu.com/view/*"
+      ],
+      "all_frames": true,
+      "run_at": "document_start"
+    }
+  ],
+  "default_locale": "zh_CN",
+  "description": "__MSG_ExtensionDescription__",
+  "icons": {
+    "128": "images/icons/128x128.png",
+    "16": "images/icons/16x16.png",
+    "19": "images/icons/19x19.png",
+    "32": "images/icons/32x32.png",
+    "48": "images/icons/48x48.png"
+  },
+  "manifest_version": 2,
+  "options_page": "options.html",
+  "name": "__MSG_ExtensionName__",
+  "short_name": "__MSG_ExtensionShortName__",
+  "permissions": [
+    "tabs",
+    "contextMenus",
+    "http://*/*",
+    "https://*/*"
+  ],
+  "version": "1.4.7",
+  "web_accessible_resources": [
+    "reader.html",
+    "js/lib/jquery-1.10.2.min.map",
+    "css/images/logo.png"
+  ]
 }
