--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "饥猪阅读（Piggy Reader）\r ===========",
   "main": "gulpfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "putian": "node putian/putian.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
     "gulp-if": "^1.2.5",
     "gulp-minify-css": "^1.2.0",
     "gulp-uglify": "^1.2.0",
-    "gulp-zip": "^3.0.2"
+    "gulp-zip": "^3.0.2",
+    "pegjs": "^0.9.0"
   }
 }
